kubernetes/semaphore/helm/deployment.yaml
---
# Source: semaphore/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: semaphore
  namespace: semaphore
  labels:
    app.kubernetes.io/name: "semaphore"
    app.kubernetes.io/instance: "semaphore"
    app.kubernetes.io/version: "2.18.3"
    app.kubernetes.io/managed-by: "Helm"

spec:
  replicas: 1

  strategy:
    
    type: Recreate

  selector:
    matchLabels:
      app.kubernetes.io/name: semaphore
      app.kubernetes.io/instance: semaphore

  template:
    metadata:
      labels:
        app.kubernetes.io/name: "semaphore"
        app.kubernetes.io/instance: "semaphore"
        app.kubernetes.io/version: "2.18.3"
        app.kubernetes.io/managed-by: "Helm"
      annotations:
        checksum/config: 6db2d80fdda45e7be278174345179b6ece77d6ca957902f08bb3ba861921e4a8
        reloader.stakater.com/auto: "true"

    spec:
      serviceAccountName: semaphore

      securityContext:
        fsGroup: 1001

      containers:
        - name: semaphore
          image: semaphoreui/semaphore:v2.18.3
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 3000
              protocol: TCP

          livenessProbe:
            httpGet:
              path: /
              port: http

          readinessProbe:
            httpGet:
              path: /
              port: http

          resources:
            limits: {}
            requests:
              cpu: 100m
              memory: 64Mi

          volumeMounts:
            - name: config
              mountPath: /etc/semaphore/config.json
              subPath: config.json
            - name: workdir
              mountPath: /tmp/semaphore

      volumes:
        - name: config
          configMap:
            name: semaphore-config
        - name: workdir
          persistentVolumeClaim:
            claimName: semaphore-workdir
