kubernetes/semaphore/helm/service.yaml
---
# Source: semaphore/templates/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: semaphore
  namespace: semaphore
  labels:
    app.kubernetes.io/name: "semaphore"
    app.kubernetes.io/instance: "semaphore"
    app.kubernetes.io/version: "2.18.3"
    app.kubernetes.io/managed-by: "Helm"

spec:
  type: ClusterIP

  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP

  selector:
    app.kubernetes.io/name: semaphore
    app.kubernetes.io/instance: semaphore
